# AutowareAuto

./: .aderc  .aderc-amd64-dashing  .aderc-amd64-dashing-lgsvl  .aderc-amd64-foxy  .aderc-amd64-foxy-gpu  .aderc-amd64-foxy-lgsvl  .aderc-arm64  .aderc-arm64-dashing  .aderc-arm64-foxy  .aderc-arm64-foxy-gpu  .aderc-gpu  .aderc-lgsvl  .clang-format  .doxyfile  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lcovrc  .lfsconfig  .readthedocs.yaml  .webauto-ci.yml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  autoware.auto.dashing.repos  autoware.auto.foxy.repos  autoware.auto.repos  autoware_demo.yaml  computed-record.yaml  demo_zf.rviz  lgsvl-sensors.json  run_demo_ros.bash  run_demo_rviz.bash  run_demo_zf.bash
.git-hooks/: commit-msg  pre-commit  (+1 more)
osrf_testing_tools_cpp/: CMakeLists.txt  osrf_testing_tools_cppConfig.cmake.in
osrf_testing_tools_cpp/cmake/: osrf_testing_tools_cpp_add_test.cmake  osrf_testing_tools_cpp_extract_and_build_googletest.cmake  osrf_testing_tools_cpp_require_googletest.cmake
osrf_testing_tools_cpp/include/osrf_testing_tools_cpp/: demangle.hpp
osrf_testing_tools_cpp/include/osrf_testing_tools_cpp/memory_tools/: initialize.hpp  is_working.hpp  memory_tools.hpp  memory_tools_service.hpp  register_hooks.hpp  stack_trace.hpp  verbosity.hpp
osrf_testing_tools_cpp/src/memory_tools/: count_function_occurrences_in_backtrace.hpp  dispatch_callback.hpp  implementation_monitoring_override.cpp  implementation_monitoring_override.hpp  is_working.cpp  memory_tools_service_factory.hpp  memory_tools_service_impl.hpp  register_hooks.cpp  safe_fwrite.hpp  stack_trace.cpp
osrf_testing_tools_cpp/src/memory_tools/impl/: apple.cpp  unix_common.cpp
osrf_testing_tools_cpp/src/test_runner/: main.cpp
osrf_testing_tools_cpp/test/cmake/: CMakeLists.txt  test_osrf_testing_tools_cpp_filter_versions.cmake
osrf_testing_tools_cpp/test/test_runner/: CMakeLists.txt
planning/planning_common/: package.xml
planning/planning_common/include/planning_common/: visibility_control.hpp
planning/planning_common/src/planning_common/: planner_base.cpp
planning/planning_common/test/: context.cpp  planner_base.cpp
planning/planning_common_nodes/: CMakeLists.txt
planning/planning_common_nodes/include/planning_common_nodes/: planner_base_node.hpp
planning/planning_common_nodes/test/: error.cpp  publisher.hpp
src/autoware_auto_msgs/: CMakeLists.txt  package.xml
src/autoware_auto_msgs/design/: autoware_auto_msgs-design.md  autoware_auto_msgs_design.md
src/autoware_auto_msgs/msg/: BoundingBox.msg  Complex32.msg  ControlDiagnostic.msg  Trajectory.msg  VehicleKinematicState.msg  VehicleOdometry.msg  VehicleStateCommand.msg
src/bridge/autoware_msgs/: CMakeLists.txt  package.xml
src/bridge/autoware_msgs/msg/: AccelCmd.msg  BrakeCmd.msg  LampCmd.msg  SteerCmd.msg  VehicleCmd.msg
src/bridge/bridge_velodyne_node/: CMakeLists.txt  package.xml
src/bridge/bridge_velodyne_node/launch/: bridge_velodyne_node.launch.py
src/bridge/bridge_velodyne_node/test/: bridge_velodyne_node_test.py  velodyne_pointcloud_test.pcap
src/common/algorithm/: CMakeLists.txt  package.xml
src/common/covariance_insertion_node/: CMakeLists.txt  package.xml
src/common/covariance_insertion_node/param/: covariance_insertion_node.param.template.yaml
src/common/covariance_insertion_node/src/: convert.cpp  covariance_insertion_node.cpp  main.cpp
src/common/covariance_insertion_node/test/: test_covariance_insertion_node.cpp
src/common/covariance_insertion_nodes/: CMakeLists.txt  package.xml
src/common/covariance_insertion_nodes/design/: covariance_insertion_nodes-design.md
src/common/covariance_insertion_nodes/src/: convert.cpp  covariance_insertion_node.cpp
src/common/covariance_insertion_nodes/test/: test_covariance_insertion_node.cpp
src/common/geometry/: CMakeLists.txt  package.xml
src/common/geometry/design/: spatial-hash-design.md
src/common/geometry/src/: spatial_hash.cpp
src/common/lidar_utils/: CMakeLists.txt  lidar_utils-extras.cmake  package.xml
src/common/lidar_utils/src/: point_cloud_utils.cpp
src/common/measurement_conversion/: CMakeLists.txt  package.xml
src/common/measurement_conversion/design/: measurement_conversion-design.md
src/common/measurement_conversion/src/: measurement_conversion.cpp  measurement_transformation.cpp
src/common/measurement_conversion/test/: test_eigen_utils.cpp  test_measurement_conversion.cpp  test_measurement_transformation.cpp
src/common/motion_model/: CMakeLists.txt  package.xml
src/common/motion_model/design/: motion_model-design.md
src/common/motion_model/notebooks/: Pipfile  Readme.md
src/common/motion_model/src/: catr_core.cpp  constant_acceleration.cpp  differential_drive_motion_model.cpp  linear_motion_model.cpp
src/common/motion_model/test/: test_catr.cpp  test_constant_acceleration.cpp  test_constant_velocity.cpp  test_differential_motion_model.cpp  test_linear_motion_model.cpp  test_parameter_estimator.cpp  test_stationary_motion_model.cpp
src/common/neural_networks/: CMakeLists.txt  neural_networks-extras.cmake  package.xml
src/common/neural_networks/design/: neural_networks-design.md
src/common/optimization/: CMakeLists.txt  optimization-extras.cmake  package.xml
src/common/optimization/design/: more_thuente_line_search-design.md
src/common/optimization/src/: newtons_method_optimizer.cpp  optimization.cpp  optimizer_options.cpp  utils.cpp
src/common/optimization/test/: test_cache_states.cpp  test_cache_states.hpp  test_more_thuente_line_search.cpp  test_newton_optimization.cpp  test_newton_optimization.hpp
src/common/signal_filters/: CMakeLists.txt  package.xml
src/common/signal_filters/design/: signal_filters-design.md
src/common/state_estimation/: CMakeLists.txt  package.xml
src/common/state_estimation_nodes/: CMakeLists.txt  package.xml
src/common/state_vector/: CMakeLists.txt  package.xml
test_osrf_testing_tools_cpp/: CMakeLists.txt
test_osrf_testing_tools_cpp/test/: test_is_not_working.cpp
testing/motion_testing/: CMakeLists.txt
(+2084 files in other folders)
