<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>planning_common</name>
  <version>0.0.1</version>
  <description>
    Interfact definitions for motion planners and other helper functions
  </description>
  <maintainer email="christopherj.ho@gmail.com">Christopher Ho</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>mpc_warnings_cmake</buildtool_depend>

  <depend>autoware_auto_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>time_utils</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <build_depend>controller_common</build_depend>
  <build_depend>motion_testing</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
