<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_msgs</name>
  <version>0.0.2</version>
  <description>A ROS 2 mirror of a subset of Autoware.AI messages for compabitility purposes only</description>
  <maintainer email="opensource@apex.ai">Apex.AI, Inc</maintainer>
  <license>Apache 2 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <!-- Message generation dependencies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
