<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>autoware_auto_algorithm</name>
    <version>0.0.1</version>
    <description>Generic algorithms like sort</description>
    <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>

    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_pclint</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
