<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lidar_utils</name>
    <version>0.0.2</version>
    <description>Common utility functions and classes for point clouds</description>
    <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
    <license>Apex.AI License</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>
    <build_depend>eigen</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <build_export_depend>eigen</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>

    <depend>autoware_auto_common</depend>
    <depend>autoware_auto_geometry</depend>
    <depend>geometry_msgs</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
